--- a/dir-manager/src/main/AndroidManifest.xml
+++ b/dir-manager/src/main/AndroidManifest.xml
@@ -15,4 +15,8 @@
   ~ limitations under the License.
   -->
 
-<manifest package="vip.mystery0.dirManager"/>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+	package="vip.mystery0.dirManager">
+
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+</manifest>
