--- a/dir-manager/build.gradle
+++ b/dir-manager/build.gradle
@@ -19,14 +19,13 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-	compileSdkVersion 27
+	compileSdkVersion 28
 
 	defaultConfig {
-		minSdkVersion 15
-		targetSdkVersion 27
+		minSdkVersion 18
+		targetSdkVersion 28
 		versionCode 1
 		versionName "1.0"
-
 
 		vectorDrawables.useSupportLibrary = true
 	}
@@ -34,11 +33,11 @@ android {
 }
 
 dependencies {
-	api 'com.android.support:appcompat-v7:27.1.0'
-	api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-	api 'com.android.support:recyclerview-v7:27.1.0'
-	api 'io.reactivex.rxjava2:rxandroid:2.0.2'
-	api 'io.reactivex.rxjava2:rxjava:2.1.10'
+	implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+	implementation 'androidx.recyclerview:recyclerview:1.0.0-beta01'
+	implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+	implementation 'io.reactivex.rxjava2:rxjava:2.1.10'
 }
 repositories {
 	mavenCentral()
