--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,12 +20,9 @@ android {
 
 dependencies {
 	implementation fileTree(include: ['*.jar'], dir: 'libs')
-	implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
-	implementation "androidx.recyclerview:recyclerview:1.0.0-beta01"
-	implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha1'
-	testImplementation 'junit:junit:4.12'
-	androidTestImplementation 'androidx.test:runner:1.1.0-alpha3'
-	androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha3'
+	implementation 'androidx.appcompat:appcompat:1.0.2'
+	implementation "androidx.recyclerview:recyclerview:1.1.0-alpha02"
+	implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 	implementation project(':dir-manager')
 }
