--- a/dir-manager/build.gradle
+++ b/dir-manager/build.gradle
@@ -33,11 +33,11 @@ android {
 }
 
 dependencies {
-	implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+	compileOnly 'androidx.appcompat:appcompat:1.0.2'
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-	implementation 'androidx.recyclerview:recyclerview:1.0.0-beta01'
-	implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
-	implementation 'io.reactivex.rxjava2:rxjava:2.1.10'
+	compileOnly 'androidx.recyclerview:recyclerview:1.1.0-alpha02'
+	compileOnly 'io.reactivex.rxjava2:rxandroid:2.1.0'
+	compileOnly 'io.reactivex.rxjava2:rxjava:2.2.4'
 }
 repositories {
 	mavenCentral()
