--- a/dir-manager/build.gradle
+++ b/dir-manager/build.gradle
@@ -25,11 +25,10 @@ android {
 		minSdkVersion 18
 		targetSdkVersion 28
 		versionCode 1
-		versionName "1.0"
+		versionName POM_VERSION
 
 		vectorDrawables.useSupportLibrary = true
 	}
-
 }
 
 dependencies {
@@ -42,3 +41,6 @@ dependencies {
 repositories {
 	mavenCentral()
 }
+
+// 在底部加上这句
+apply from: '../push.gradle'
