--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,14 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+# compile '$POM_GROUP_ID:$POM_ARTIFACT_ID:$POM_VERSION'
+POM_GROUP_ID=vip.mystery0.tools
+POM_ARTIFACT_ID=dirmanager
+POM_VERSION=1.2.1
+
+POM_REPO_NAME=dirmanager
+POM_USER_ORG=mystery00
+POM_UPLOAD_NAME=DirManager
+POM_DESC=This is desc.
+POM_WEBSITE=https://github.com/Mystery0Tools/DirManager
