修复上传脚本

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,7 +19,7 @@ POM_GROUP_ID=vip.mystery0.tools
 POM_ARTIFACT_ID=dirmanager
 POM_VERSION=1.2.1
 
-POM_REPO_NAME=dirmanager
+POM_REPO_NAME=tools
 POM_USER_ORG=mystery00
 POM_UPLOAD_NAME=DirManager
 POM_DESC=This is desc.
